--- a/index.html
+++ b/index.html
@@ -211,15 +211,15 @@ function replace_none()
 <th>Durchschnitt</th>
 </tr>
 <tr class="odd">
-<td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
+<td align=center valign=top><nobr><div class="plus" id="img_3" onclick="ftoggle('div_laps_3', 'div_best_laps_3', 'img_3')"></nobr></td>
 <td align=center valign=top><nobr>1</nobr></td>
-<td align=center valign=top><nobr>2</nobr></td>
-<td align=center valign=top><nobr>0</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
+<td align=center valign=top><nobr>3</nobr></td>
+<td align=center valign=top><nobr>6</nobr></td>
+<td valign=top><nobr>6: 00:00.344<br><div id="div_laps_3" style="display:none">5: 00:00.246<br>4: 00:00.331<br>3: 00:00.389<br>2: 00:01.428<br>1: 00:14.548</div></nobr></td>
+<td align=center valign=top><nobr>10:25:48.063</nobr></td>
+<td align=center valign=top><nobr>00:17.286</nobr></td>
+<td valign=top><nobr>1: 00:00.246<br><div id="div_best_laps_3" style="display:none">2: 00:00.331<br>3: 00:00.344<br>4: 00:00.389<br>5: 00:01.428<br>6: 00:14.548</div></nobr></td>
+<td align=center valign=top><nobr>00:02.881</nobr></td>
 </tr>
 <tr class="even">
 <th><nobr><div class="plus" id="img_0" onclick="ftoggle_all()"></nobr></th>
