--- a/index.html
+++ b/index.html
@@ -222,6 +222,17 @@ function replace_none()
 <td align=center valign=top><nobr>00:02.881</nobr></td>
 </tr>
 <tr class="even">
+<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr>2</nobr></td>
+<td align=center valign=top><nobr>4</nobr></td>
+<td align=center valign=top><nobr>2</nobr></td>
+<td valign=top><nobr>2: 00:00.435<br><div id="div_laps_4" style="display:none">1: 02:29.883</div></nobr></td>
+<td align=center valign=top><nobr>10:28:01.095</nobr></td>
+<td align=center valign=top><nobr>02:30.318</nobr></td>
+<td valign=top><nobr>1: 00:00.435<br><div id="div_best_laps_4" style="display:none">2: 02:29.883</div></nobr></td>
+<td align=center valign=top><nobr>01:15.159</nobr></td>
+</tr>
+<tr class="odd">
 <th><nobr><div class="plus" id="img_0" onclick="ftoggle_all()"></nobr></th>
 <th>Rang</th>
 <th>Startnr</th>
