--- a/index.html
+++ b/index.html
@@ -222,8 +222,19 @@ function replace_none()
 <td align=center valign=top><nobr>00:02.881</nobr></td>
 </tr>
 <tr class="even">
-<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr><div class="plus" id="img_5" onclick="ftoggle('div_laps_5', 'div_best_laps_5', 'img_5')"></nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
+<td align=center valign=top><nobr>5</nobr></td>
+<td align=center valign=top><nobr>4</nobr></td>
+<td valign=top><nobr>4: 00:00.331<br><div id="div_laps_5" style="display:none">3: 00:00.299<br>2: 00:00.412<br>1: 04:33.931</div></nobr></td>
+<td align=center valign=top><nobr>10:30:05.750</nobr></td>
+<td align=center valign=top><nobr>04:34.973</nobr></td>
+<td valign=top><nobr>1: 00:00.299<br><div id="div_best_laps_5" style="display:none">2: 00:00.331<br>3: 00:00.412<br>4: 04:33.931</div></nobr></td>
+<td align=center valign=top><nobr>01:08.743</nobr></td>
+</tr>
+<tr class="odd">
+<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr>3</nobr></td>
 <td align=center valign=top><nobr>4</nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
 <td valign=top><nobr>2: 00:00.435<br><div id="div_laps_4" style="display:none">1: 02:29.883</div></nobr></td>
@@ -232,7 +243,7 @@ function replace_none()
 <td valign=top><nobr>1: 00:00.435<br><div id="div_best_laps_4" style="display:none">2: 02:29.883</div></nobr></td>
 <td align=center valign=top><nobr>01:15.159</nobr></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <th><nobr><div class="plus" id="img_0" onclick="ftoggle_all()"></nobr></th>
 <th>Rang</th>
 <th>Startnr</th>
