--- a/index.html
+++ b/index.html
@@ -233,8 +233,19 @@ function replace_none()
 <td align=center valign=top><nobr>01:08.743</nobr></td>
 </tr>
 <tr class="odd">
-<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr><div class="plus" id="img_6" onclick="ftoggle('div_laps_6', 'div_best_laps_6', 'img_6')"></nobr></td>
 <td align=center valign=top><nobr>3</nobr></td>
+<td align=center valign=top><nobr>6</nobr></td>
+<td align=center valign=top><nobr>4</nobr></td>
+<td valign=top><nobr>4: 00:00.390<br><div id="div_laps_6" style="display:none">3: 00:00.369<br>2: 00:00.336<br>1: 05:58.531</div></nobr></td>
+<td align=center valign=top><nobr>10:31:30.403</nobr></td>
+<td align=center valign=top><nobr>05:59.626</nobr></td>
+<td valign=top><nobr>1: 00:00.336<br><div id="div_best_laps_6" style="display:none">2: 00:00.369<br>3: 00:00.390<br>4: 05:58.531</div></nobr></td>
+<td align=center valign=top><nobr>01:29.906</nobr></td>
+</tr>
+<tr class="even">
+<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr>4</nobr></td>
 <td align=center valign=top><nobr>4</nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
 <td valign=top><nobr>2: 00:00.435<br><div id="div_laps_4" style="display:none">1: 02:29.883</div></nobr></td>
@@ -243,7 +254,7 @@ function replace_none()
 <td valign=top><nobr>1: 00:00.435<br><div id="div_best_laps_4" style="display:none">2: 02:29.883</div></nobr></td>
 <td align=center valign=top><nobr>01:15.159</nobr></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <th><nobr><div class="plus" id="img_0" onclick="ftoggle_all()"></nobr></th>
 <th>Rang</th>
 <th>Startnr</th>
