--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@ function replace_none()
 <td align=center valign=top><nobr><div class="plus" id="img_5" onclick="ftoggle('div_laps_5', 'div_best_laps_5', 'img_5')"></nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
 <td align=center valign=top><nobr>5</nobr></td>
-<td align=center valign=top><nobr>4</nobr></td>
-<td valign=top><nobr>4: 00:00.331<br><div id="div_laps_5" style="display:none">3: 00:00.299<br>2: 00:00.412<br>1: 04:33.931</div></nobr></td>
-<td align=center valign=top><nobr>10:30:05.750</nobr></td>
-<td align=center valign=top><nobr>04:34.973</nobr></td>
-<td valign=top><nobr>1: 00:00.299<br><div id="div_best_laps_5" style="display:none">2: 00:00.331<br>3: 00:00.412<br>4: 04:33.931</div></nobr></td>
-<td align=center valign=top><nobr>01:08.743</nobr></td>
+<td align=center valign=top><nobr>6</nobr></td>
+<td valign=top><nobr>6: 00:00.381<br><div id="div_laps_5" style="display:none">5: 28:14.090<br>4: 00:00.331<br>3: 00:00.299<br>2: 00:00.412<br>1: 04:33.931</div></nobr></td>
+<td align=center valign=top><nobr>10:58:20.221</nobr></td>
+<td align=center valign=top><nobr>32:49.444</nobr></td>
+<td valign=top><nobr>1: 00:00.299<br><div id="div_best_laps_5" style="display:none">2: 00:00.331<br>3: 00:00.381<br>4: 00:00.412<br>5: 04:33.931<br>6: 28:14.090</div></nobr></td>
+<td align=center valign=top><nobr>05:28.240</nobr></td>
 </tr>
 <tr class="odd">
 <td align=center valign=top><nobr><div class="plus" id="img_6" onclick="ftoggle('div_laps_6', 'div_best_laps_6', 'img_6')"></nobr></td>
@@ -244,8 +244,19 @@ function replace_none()
 <td align=center valign=top><nobr>01:29.906</nobr></td>
 </tr>
 <tr class="even">
-<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr><div class="plus" id="img_9" onclick="ftoggle('div_laps_9', 'div_best_laps_9', 'img_9')"></nobr></td>
 <td align=center valign=top><nobr>4</nobr></td>
+<td align=center valign=top><nobr>9</nobr></td>
+<td align=center valign=top><nobr>3</nobr></td>
+<td valign=top><nobr>3: 00:00.229<br><div id="div_laps_9" style="display:none">2: 00:00.317<br>1: 32:50.746</div></nobr></td>
+<td align=center valign=top><nobr>10:58:22.069</nobr></td>
+<td align=center valign=top><nobr>32:51.292</nobr></td>
+<td valign=top><nobr>1: 00:00.229<br><div id="div_best_laps_9" style="display:none">2: 00:00.317<br>3: 32:50.746</div></nobr></td>
+<td align=center valign=top><nobr>10:57.097</nobr></td>
+</tr>
+<tr class="odd">
+<td align=center valign=top><nobr><div class="plus" id="img_4" onclick="ftoggle('div_laps_4', 'div_best_laps_4', 'img_4')"></nobr></td>
+<td align=center valign=top><nobr>5</nobr></td>
 <td align=center valign=top><nobr>4</nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
 <td valign=top><nobr>2: 00:00.435<br><div id="div_laps_4" style="display:none">1: 02:29.883</div></nobr></td>
@@ -254,7 +265,7 @@ function replace_none()
 <td valign=top><nobr>1: 00:00.435<br><div id="div_best_laps_4" style="display:none">2: 02:29.883</div></nobr></td>
 <td align=center valign=top><nobr>01:15.159</nobr></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <th><nobr><div class="plus" id="img_0" onclick="ftoggle_all()"></nobr></th>
 <th>Rang</th>
 <th>Startnr</th>
