--- a/index.html
+++ b/index.html
@@ -214,27 +214,49 @@ function replace_none()
 <td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
 <td align=center valign=top><nobr>1</nobr></td>
 <td align=center valign=top><nobr>3</nobr></td>
-<td align=center valign=top><nobr>0</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
+<td align=center valign=top><nobr>1</nobr></td>
+<td valign=top><nobr>1: 01:24.818</nobr></td>
+<td align=center valign=top><nobr>20:02:50.962</nobr></td>
+<td align=center valign=top><nobr>01:24.818</nobr></td>
+<td valign=top><nobr>1: 01:24.818</nobr></td>
+<td align=center valign=top><nobr>01:24.818</nobr></td>
 </tr>
 <tr class="even">
 <td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
 <td align=center valign=top><nobr>2</nobr></td>
 <td align=center valign=top><nobr>5</nobr></td>
-<td align=center valign=top><nobr>0</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
-<td align=center valign=top><nobr>-</nobr></td>
+<td align=center valign=top><nobr>1</nobr></td>
+<td valign=top><nobr>1: 01:21.563</nobr></td>
+<td align=center valign=top><nobr>20:02:51.679</nobr></td>
+<td align=center valign=top><nobr>01:21.563</nobr></td>
+<td valign=top><nobr>1: 01:21.563</nobr></td>
+<td align=center valign=top><nobr>01:21.563</nobr></td>
 </tr>
 <tr class="odd">
 <td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
 <td align=center valign=top><nobr>3</nobr></td>
+<td align=center valign=top><nobr>9</nobr></td>
+<td align=center valign=top><nobr>1</nobr></td>
+<td valign=top><nobr>1: 01:20.896</nobr></td>
+<td align=center valign=top><nobr>20:02:52.459</nobr></td>
+<td align=center valign=top><nobr>01:20.896</nobr></td>
+<td valign=top><nobr>1: 01:20.896</nobr></td>
+<td align=center valign=top><nobr>01:20.896</nobr></td>
+</tr>
+<tr class="even">
+<td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
+<td align=center valign=top><nobr>4</nobr></td>
+<td align=center valign=top><nobr>8</nobr></td>
+<td align=center valign=top><nobr>1</nobr></td>
+<td valign=top><nobr>1: 01:23.348</nobr></td>
+<td align=center valign=top><nobr>20:02:55.874</nobr></td>
+<td align=center valign=top><nobr>01:23.348</nobr></td>
+<td valign=top><nobr>1: 01:23.348</nobr></td>
+<td align=center valign=top><nobr>01:23.348</nobr></td>
+</tr>
+<tr class="odd">
+<td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
+<td align=center valign=top><nobr>5</nobr></td>
 <td align=center valign=top><nobr>6</nobr></td>
 <td align=center valign=top><nobr>0</nobr></td>
 <td align=center valign=top><nobr>-</nobr></td>
@@ -245,8 +267,8 @@ function replace_none()
 </tr>
 <tr class="even">
 <td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
-<td align=center valign=top><nobr>4</nobr></td>
-<td align=center valign=top><nobr>9</nobr></td>
+<td align=center valign=top><nobr>6</nobr></td>
+<td align=center valign=top><nobr>83</nobr></td>
 <td align=center valign=top><nobr>0</nobr></td>
 <td align=center valign=top><nobr>-</nobr></td>
 <td align=center valign=top><nobr>-</nobr></td>
@@ -256,8 +278,8 @@ function replace_none()
 </tr>
 <tr class="odd">
 <td align=center valign=top><nobr><div class="minus_nopointer"></nobr></td>
-<td align=center valign=top><nobr>5</nobr></td>
-<td align=center valign=top><nobr>8</nobr></td>
+<td align=center valign=top><nobr>7</nobr></td>
+<td align=center valign=top><nobr>7</nobr></td>
 <td align=center valign=top><nobr>0</nobr></td>
 <td align=center valign=top><nobr>-</nobr></td>
 <td align=center valign=top><nobr>-</nobr></td>
